--- a/WebGLBuild/index.html
+++ b/WebGLBuild/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/WebGLBuild.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WebGLBuild.data.unityweb",
-        frameworkUrl: buildUrl + "/WebGLBuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/WebGLBuild.wasm.unityweb",
+        dataUrl: buildUrl + "/WebGLBuild.data",
+        frameworkUrl: buildUrl + "/WebGLBuild.framework.js",
+        codeUrl: buildUrl + "/WebGLBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Jump. Shoot. Panic.",
